--- a/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/components/case-edit/controls/textbox/case-textbox-control.component.html
+++ b/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/components/case-edit/controls/textbox/case-textbox-control.component.html
@@ -1,3 +1,12 @@
 <ng-container [formGroup]="form">
-    <mbsc-input [formControlName]="field.Name" [disabled]="isReadonly ? '' : null">{{field.Label}}</mbsc-input>
+    <mbsc-input [formControlName]="field.Name" >{{field.Label}}</mbsc-input> 
+<!--
+    <label>
+        {{field.Label}}
+        <input [formControlName]="field.Name" [readonly]="isReadonly ? '' : null" />
+    </label>     
+    <label class="mbsc-err">
+        <input type="text" placeholder="Text field with error style and message"  />
+        <span class="mbsc-err-msg">Error message!</span>
+    </label> -->
 </ng-container>
