--- a/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/components/case-edit/case-edit.component.html
+++ b/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/components/case-edit/case-edit.component.html
@@ -17,7 +17,9 @@
                             <case-textbox-control *ngIf="hasField('Persons_EMail')" [field]="getField('Persons_EMail')" [form]="form"></case-textbox-control>
                             <case-textbox-control *ngIf="hasField('Persons_Phone')" [field]="getField('Persons_Phone')" [form]="form"></case-textbox-control>
                             <case-textbox-control *ngIf="hasField('Persons_CellPhone')" [field]="getField('Persons_CellPhone')" [form]="form"></case-textbox-control>
-
+                            <case-dropdown-control *ngIf="hasField('Region_Id')" [field]="getField('Region_Id')" [form]="form" [dataSource]="dataSource.options.regions"></case-dropdown-control>
+                            <case-dropdown-control *ngIf="hasField('Department_Id')" [field]="getField('Department_Id')" [form]="form" [dataSource]="dataSource.options.departments"></case-dropdown-control>
+                            <case-dropdown-control *ngIf="hasField('OU_Id')" [field]="getField('OU_Id')" [form]="form" [dataSource]="dataSource.options.oUs"></case-dropdown-control>
                             <case-textbox-control *ngIf="hasField('CostCentre')" [field]="getField('CostCentre')" [form]="form"></case-textbox-control>
                             <case-textbox-control *ngIf="hasField('Place')" [field]="getField('Place')" [form]="form"></case-textbox-control>
                             <case-textbox-control *ngIf="hasField('UserCode')" [field]="getField('UserCode')" [form]="form"></case-textbox-control>                            
@@ -33,7 +35,9 @@
                             <case-textbox-control *ngIf="hasField('IsAbout_Persons_Email')" [field]="getField('IsAbout_Persons_Email')" [form]="form"></case-textbox-control>
                             <case-textbox-control *ngIf="hasField('IsAbout_Persons_Phone')" [field]="getField('IsAbout_Persons_Phone')" [form]="form"></case-textbox-control>
                             <case-textbox-control *ngIf="hasField('IsAbout_Persons_CellPhone')" [field]="getField('IsAbout_Persons_CellPhone')" [form]="form"></case-textbox-control>
-
+                            <case-dropdown-control *ngIf="hasField('IsAbout_Region_Id')" [field]="getField('IsAbout_Region_Id')" [form]="form" [dataSource]="dataSource.options.regions"></case-dropdown-control>
+                            <case-dropdown-control *ngIf="hasField('IsAbout_Department_Id')" [field]="getField('IsAbout_Department_Id')" [form]="form" [dataSource]="dataSource.options.isAboutDepartments"></case-dropdown-control>
+                            <case-dropdown-control *ngIf="hasField('IsAbout_OU_Id')" [field]="getField('IsAbout_OU_Id')" [form]="form" [dataSource]="dataSource.options.isAboutOUs"></case-dropdown-control>
                             <case-textbox-control *ngIf="hasField('IsAbout_CostCentre')" [field]="getField('IsAbout_CostCentre')" [form]="form"></case-textbox-control>
                             <case-textbox-control *ngIf="hasField('IsAbout_Place')" [field]="getField('IsAbout_Place')" [form]="form"></case-textbox-control>
                             <case-textbox-control *ngIf="hasField('IsAbout_UserCode')" [field]="getField('IsAbout_UserCode')" [form]="form"></case-textbox-control>                            
@@ -54,14 +58,51 @@
                         <mbsc-form-group-content>
                                 <case-textbox-control *ngIf="hasField('CaseNumber')" [field]="getField('CaseNumber')" [form]="form"></case-textbox-control>
                                 <case-date-control *ngIf="hasField('RegTime')" [field]="getField('RegTime')" [form]="form"></case-date-control>
-
+                                <case-date-control *ngIf="hasField('ChangeTime')" [field]="getField('ChangeTime')" [form]="form"></case-date-control>
+                                <case-textbox-control *ngIf="hasField('User_Id')" [field]="getField('User_Id')" [form]="form"></case-textbox-control>
+                                <case-dropdown-control *ngIf="hasField('RegistrationSourceCustomer')" [field]="getField('RegistrationSourceCustomer')" [form]="form"  [dataSource]="dataSource.options.customerRegistrationSources"></case-dropdown-control>
+                                <case-multi-dropdown-control *ngIf="hasField('CaseType_Id')" [field]="getField('CaseType_Id')" [form]="form"></case-multi-dropdown-control>
+                                <case-multi-dropdown-control *ngIf="hasField('ProductArea_Id')" [field]="getField('ProductArea_Id')" [form]="form"></case-multi-dropdown-control>
+                                <case-dropdown-control *ngIf="hasField('System_Id')" [field]="getField('System_Id')" [form]="form" [dataSource]="dataSource.options.systems"></case-dropdown-control>
+                                <case-dropdown-control *ngIf="hasField('Urgency_Id')" [field]="getField('Urgency_Id')" [form]="form" [dataSource]="dataSource.options.urgencies"></case-dropdown-control>
+                                <case-dropdown-control *ngIf="hasField('Impact_Id')" [field]="getField('Impact_Id')" [form]="form" [dataSource]="dataSource.options.impacts"></case-dropdown-control>
+                                <case-multi-dropdown-control *ngIf="hasField('Category_Id')" [field]="getField('Category_Id')" [form]="form" ></case-multi-dropdown-control>
+                                <case-dropdown-control *ngIf="hasField('Supplier_Id')" [field]="getField('Supplier_Id')" [form]="form" [dataSource]="dataSource.options.suppliers"></case-dropdown-control>
+                                <case-dropdown-control *ngIf="hasField('Supplier_Country_Id')" [field]="getField('Supplier_Country_Id')" [form]="form" [dataSource]="dataSource.options.countries"></case-dropdown-control>
+                                <case-textbox-control *ngIf="hasField('InvoiceNumber')" [field]="getField('InvoiceNumber')" [form]="form"></case-textbox-control>
+                                <case-textbox-control *ngIf="hasField('ReferenceNumber')" [field]="getField('ReferenceNumber')" [form]="form"></case-textbox-control>
+                                <case-textbox-control *ngIf="hasField('Caption')" [field]="getField('Caption')" [form]="form"></case-textbox-control>
+                                <!-- TODO:<case-xxx-control *ngIf="hasField('Mail2Ticket')" [field]="getField('Mail2Ticket')" [form]="form"></case-xxx-control> -->
+                                <case-textarea-control *ngIf="hasField('Description')" [field]="getField('Description')" [form]="form"></case-textarea-control>
+                                <case-textarea-control *ngIf="hasField('Miscellaneous')" [field]="getField('Miscellaneous')" [form]="form"></case-textarea-control>
+                                <case-switch-control *ngIf="hasField('ContactBeforeAction')" [field]="getField('ContactBeforeAction')" [form]="form"></case-switch-control>
+                                <case-switch-control *ngIf="hasField('SMS')" [field]="getField('SMS')" [form]="form" description="Send text message when case is closed"></case-switch-control>
+                                <case-date-control *ngIf="hasField('AgreedDate')" [field]="getField('AgreedDate')" [form]="form" type="date"></case-date-control>
+                                <case-textbox-control *ngIf="hasField('Available')" [field]="getField('Available')" [form]="form"></case-textbox-control>
+                                <case-textbox-control *ngIf="hasField('Cost')" [field]="getField('Cost')" [form]="form"></case-textbox-control>
+                                <case-textbox-control *ngIf="hasField('Cost_OtherCost')" [field]="getField('Cost_OtherCost')" [form]="form"></case-textbox-control>
+                                <case-dropdown-control *ngIf="hasField('Cost_Currency')" [field]="getField('Cost_Currency')" [form]="form" [dataSource]="dataSource.options.currencies"></case-dropdown-control>
                         </mbsc-form-group-content>
                     </mbsc-form-group>                                        
     
                     <mbsc-form-group collapsible open #caseManagementSection>
                         <mbsc-form-group-title>Case Management</mbsc-form-group-title>
                         <mbsc-form-group-content>
-
+                            <case-dropdown-control *ngIf="hasField('WorkingGroup_Id')" [field]="getField('WorkingGroup_Id')" [form]="form" ></case-dropdown-control>
+                            <case-dropdown-control *ngIf="hasField('CaseResponsibleUser_Id')" [field]="getField('CaseResponsibleUser_Id')" [form]="form" ></case-dropdown-control>
+                            <case-dropdown-control *ngIf="hasField('Performer_User_Id')" [field]="getField('Performer_User_Id')" [form]="form" ></case-dropdown-control>
+                            <case-dropdown-control *ngIf="hasField('Priority_Id')" [field]="getField('Priority_Id')" [form]="form" ></case-dropdown-control>
+                            <case-dropdown-control *ngIf="hasField('Status_Id')" [field]="getField('Status_Id')" [form]="form" ></case-dropdown-control>
+                            <case-dropdown-control *ngIf="hasField('StateSecondary_Id')" [field]="getField('StateSecondary_Id')" [form]="form" ></case-dropdown-control>
+                            <case-dropdown-control *ngIf="hasField('Project')" [field]="getField('Project')" [form]="form" ></case-dropdown-control>
+                            <case-dropdown-control *ngIf="hasField('Problem')" [field]="getField('Problem')" [form]="form" ></case-dropdown-control>
+                            <case-dropdown-control *ngIf="hasField('CausingPart')" [field]="getField('CausingPart')" [form]="form"></case-dropdown-control>
+                            <case-dropdown-control *ngIf="hasField('Change')" [field]="getField('Change')" [form]="form" ></case-dropdown-control>
+                            <case-date-control *ngIf="hasField('PlanDate')" [field]="getField('PlanDate')" [form]="form" type="date"></case-date-control>
+                            <case-date-control *ngIf="hasField('WatchDate')" [field]="getField('WatchDate')" [form]="form" type="date"></case-date-control>
+                            <case-switch-control *ngIf="hasField('Verified')" [field]="getField('Verified')" [form]="form"></case-switch-control>
+                            <case-textarea-control *ngIf="hasField('VerifiedDescription')" [field]="getField('VerifiedDescription')" [form]="form"></case-textarea-control>
+                            <case-dropdown-control *ngIf="hasField('SolutionRate')" [field]="getField('SolutionRate')" [form]="form" ></case-dropdown-control>
                         </mbsc-form-group-content>
                     </mbsc-form-group>
 
