--- a/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/components/case-edit/controls/dropdown/case-dropdown-control.component.html
+++ b/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/components/case-edit/controls/dropdown/case-dropdown-control.component.html
@@ -1,4 +1,4 @@
 <ng-container [formGroup]="form">
-    <mbsc-select [formControlName]="field.Name" [data]="dataSource" [options]="options">{{field.Label}}</mbsc-select>
-    <!-- <mbsc-input [formControlName]="field.Name" >{{field.Label}}</mbsc-input>  -->
+    <mbsc-select *ngIf="!options.disabled" [formControlName]="field.name" [data]="dataSource" [options]="options">{{field.label}}</mbsc-select>
+    <mbsc-input *ngIf="options.disabled" [formControlName]="field.name" [disabled]="options.disabled">{{field.label}}</mbsc-input> 
 </ng-container>
