--- a/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/components/case-edit/controls/textarea/case-textarea-control.component.html
+++ b/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/components/case-edit/controls/textarea/case-textarea-control.component.html
@@ -1,3 +1,3 @@
 <ng-container [formGroup]="form">
-    <mbsc-textarea [formControlName]="field.Name" >{{field.Label}}</mbsc-textarea> 
+    <mbsc-textarea [formControlName]="field.name" [disabled]="options.disabled">{{field.label}}</mbsc-textarea> 
 </ng-container>
