--- a/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/content/styles/styles.scss
+++ b/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/content/styles/styles.scss
@@ -1,6 +1,19 @@
 /* You can add global styles to this file, and also import other style files */
-@import '../../../node_modules/@mobiscroll/angular/dist/css/mobiscroll.min.css';
+
+/* @import '../../../node_modules/@mobiscroll/angular/dist/css/mobiscroll.min.css'; */
 
 /*.mbsc-ios .mbsc-btn {
     background-color: #d96326
 }*/
+
+/* .mbsc-ios .mbsc-input {
+    flex-direction: column;
+}
+
+.mbsc-ios .mbsc-input .mbsc-label {
+    width: auto;
+    max-width: none;
+    font-size: .75em;
+    color: #6d6d6d;
+} */
+
