--- a/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/components/case-edit/controls/dropdown/case-multi-dropdown-control.component.html
+++ b/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/components/case-edit/controls/dropdown/case-multi-dropdown-control.component.html
@@ -1,4 +1,4 @@
 <ng-container [formGroup]="form">
-    <mbsc-input *ngIf="!options.disabled" [formControlName]="field.name" [disabled]="options.disabled">{{field.label}}</mbsc-input> 
-    <mbsc-textarea *ngIf="options.disabled" [formControlName]="field.name" [disabled]="options.disabled">{{field.label}}</mbsc-textarea> 
+    <mbsc-input *ngIf="!options.disabled" [formControlName]="field.name">{{field.label}}</mbsc-input> <!-- TODO -->
 </ng-container>
+<mbsc-textarea *ngIf="options.disabled" [(ngModel)]="text" [disabled]="true">{{field.label}}</mbsc-textarea> 
