Revert "[FIX] #62638 - Errormsg in selfservice - using html tag"
This reverts commit 643c29fbc1e6d008e15da0a6df6b8697e69d8199.

--- a/dhHelpdeskNG/dhHelpdesk_NG.Web_SelfService/Views/Case/_CaseLogNote.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web_SelfService/Views/Case/_CaseLogNote.cshtml
@@ -23,7 +23,7 @@
     string FormatLogText(Log logItem)
     {
         var logText = GetLogText(logItem).AddCharacterInParts(70, Environment.NewLine, Environment.NewLine);
-        var formatted = logText.Replace("\n", "<br />");
+        var formatted = logText.Replace("<", "").Replace("\n", "<br />");
         return formatted;
     }
 }
