--- a/dhHelpdeskNG/dhHelpdesk_NG.Web_SelfService/Views/Case/_CaseLogNote.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web_SelfService/Views/Case/_CaseLogNote.cshtml
@@ -23,7 +23,7 @@
     string FormatLogText(Log logItem)
     {
         var logText = GetLogText(logItem).AddCharacterInParts(70, Environment.NewLine, Environment.NewLine);
-        var formatted = logText.Replace("<", "").Replace("\n", "<br />");
+        var formatted = logText.Replace("\n", "<br />");
         return formatted;
     }
 }
@@ -38,7 +38,8 @@
         <div class="@(!string.IsNullOrEmpty(logItem.RegUser) ? "com-list-hd" : "com-list-com")">
             <div class="list-arrow"></div>
             <p>@GetLogUser(logItem) | @Html.DisplayFor(l => regDate)</p>
-            <p>@Html.Raw(FormatLogText(logItem))</p>
+            @*<p>@Html.Raw(FormatLogText(logItem))</p>*@       
+            <p>@FormatLogText(logItem)</p>    
             <p>
                 @if (logItem.LogFiles != null)
                 {
